[package]
name = "diatomic_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "ex_diatomic_mw"
path = "examples/ex_diatomic_mw.rs"

[[example]]
name = "ex_diatomic_electronic"
path = "examples/ex_diatomic_electronic.rs"

[[example]]
name = "line_shape_lorentz"
path = "examples/line_shape_lorentz.rs"

[[example]]
name = "line_shape_lorentz_2"
path = "examples/line_shape_lorentz_2.rs"

[[bin]]
name = "ui_mw"
path = "gui/ui_mw.rs"

[dependencies]
cairo-rs = "0.17.10"
gio = "0.17.10"
gtk = "0.17.1"
plotters = "0.3.5"
plotters-cairo = "0.4.0"
