[tool.poetry]
name = "diatomic-simulator"
version = "0.1.0"
description = ""
authors = ["aki <aki@mymail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.7.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
jupyterlab = "^4.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
